--- a/day25/homework/level25.html
+++ b/day25/homework/level25.html
@@ -49,22 +49,22 @@
 
 
 <!-- 4 -->
-inline
+<!-- inline
 კოდი html ტეგშია ში არის პირდაპირ
 
 internal
 html დოკუმენთშია
 external
-ცალკე ფაილში იწერება
+ცალკე ფაილში იწერება -->
 
 
 <!-- 5 -->
 
-ვებ გვერდის შესაქმნელად გამოიყენება html
+<!-- ვებ გვერდის შესაქმნელად გამოიყენება html
 
 css
 სტილიზაციისთვის გამოიყენება
 
 javascript
 
-ინტერაქციისთვის გამოიყენება
+ინტერაქციისთვის გამოიყენება -->
