--- a/day80/classwork/index.html
+++ b/day80/classwork/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style type="text/tailwindcss">
-      @theme {
+      /* @theme {
         --color-black: var(--black);
 
         --spacing-base-12: 12px;
@@ -15,12 +15,21 @@
         --spacing-base-28: 28px;
         --spacing-base-40: 40px;
         --spacing-base-72: 72px;
-      }
+      } */
       /* 
         --color-   გამოიყენება border, bg, text, სადაც ფერი ფიგურირებს
         --spacing- გამოიყენება p,m,w,h,size,gap,
 
         */
+
+
+
+
+
+
+
+
+/*         
       .container {
         @apply max-w-[1440px] mx-auto px-base-72;
       }
@@ -66,7 +75,13 @@
             <span>+996 247-1680</span>
         </div>
       </div>
-    </header>
+    </header> */
+
+
+
+
+
+    
   </body>
     
 </html>
