--- a/day80/homework/level80.html
+++ b/day80/homework/level80.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
     <title>Document</title>
 </head>
-<body>
-    
+<body style="padding: 20px;">
 
 
+<header style="background-color: rgba(3, 49, 63, 0.5); border-radius: 10px; padding: 20px;  border: 30px;">
 
 
+<div class="flex justify-between  max-sm:flex-col max-sm:items-center " style="display: flex; gap: 20px; ">
 
 
+<div class="box1" style=" width: 100px; height: 70px; background-color: rgb(3, 13, 48); border-radius: 5px;"></div>
+<div class="box2" style=" width: 100px; height: 70px; background-color: rgb(14, 11, 102); border-radius: 5px;"></div>
+<div class="box3" style=" width: 100px; height: 70px; background-color: rgb(10, 36, 138); border-radius: 5px;"></div>
 
 
-<script> </script>
+</div>
+
+</header>
+
+
 
 </body>
 </html>
